--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <li><a href="#" class="scroll-top">Home</a></li>
                         <li><a href="#" class="scroll-link" data-id="about">About</a></li>
                         <li><a href="#" class="scroll-link" data-id="portfolio">Portfolio</a></li>
-                        <li><a href="#" class="scroll-link" data-id="blog">Blog</a></li>
+                        <li><a href="#" class="scroll-link" data-id="blog">Testimonials</a></li>
                         <li><a href="#" class="scroll-link" data-id="contact">Contact</a></li>
                     </ul>
                 </div>
